user-kubernetes/ingress-nginx/example/tomcat-ingress-sources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    env: test

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:8.0.50-jre8-alpine
        ports:
        - name: http
          containerPort: 8080
        - name: ajp
          containerPort: 8009

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc
  namespace: test
  labels:
    app: tomcat-svc
spec:
  selector:
    app: tomcat
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tomcat.chuan.com
    http:
      paths:
      - path:
        backend:
          serviceName: tomcat-svc
          servicePort: 80
